tests/ui/transmute/transmute-in-async-fn.stderr
error[E0512]: cannot transmute between types of different sizes, or dependently-sized types
  --> $DIR/transmute-in-async-fn.rs:4:14
   |
LL |     unsafe { std::mem::transmute(1u64) }
   |              ^^^^^^^^^^^^^^^^^^^
   |
   = note: source type: `u64` (64 bits)
   = note: target type: `u32` (32 bits)

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0512`.
